[project]
name = "pytorch-tutorials"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "notebook>=7.1.3",
    "numpy>=2.4.3",
    "pandas>=3.0.2",
    "pysimverse>=0.14",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
